# claude-dynamic-hooks

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: CDHP.md  openapi.yaml
examples/handlers/read_once/: README.md  pyproject.toml  read_once.py
src/claude_dynamic_hooks/: __init__.py  config.py  events.py  paths.py
src/claude_dynamic_hooks/_cli/: main.py
src/claude_dynamic_hooks/_server/: config_watcher.py  daemon.py  process_lock.py  router_chain.py
src/claude_dynamic_hooks/_server/transport/: app.py  client.py
tests/: conftest.py  test_cdh_logs_cmd.py  test_cdh_test_cmd.py  test_config.py  test_daemon_integration.py  test_daemon_pid.py  test_events.py  test_http_client.py  test_paths.py  test_router_chain.py  test_spec_examples.py
