[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-dynamic-hooks"
version = "1.1.0"
description = "CDHP reference impl — HTTP-based router for Claude Code hooks, polyglot handlers, sequential chain semantics"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [{ name = "phansen314", email = "codingzen314@gmail.com" }]
keywords = ["claude", "claude-code", "hook", "daemon", "http", "cdhp"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "flask>=3.0",
    "requests>=2.32",
    "watchdog>=4.0",
]

[project.urls]
Homepage = "https://github.com/phansen314/claude-dynamic-hooks"
Source = "https://github.com/phansen314/claude-dynamic-hooks"
Issues = "https://github.com/phansen314/claude-dynamic-hooks/issues"
Documentation = "https://github.com/phansen314/claude-dynamic-hooks/blob/main/docs/CDHP.md"
Changelog = "https://github.com/phansen314/claude-dynamic-hooks/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.6",
    "pyyaml>=6.0",
    "jsonschema>=4.21",
]

[project.scripts]
cdh = "claude_dynamic_hooks._cli.main:main"
cdh-daemon = "claude_dynamic_hooks._server.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_dynamic_hooks"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".venv/",
    "**/.venv/",
    ".pytest_cache/",
    ".mypy_cache/",
    ".ruff_cache/",
    ".idea/",
    ".claude/",
    "__pycache__/",
    "*.pyc",
    "uv.lock",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
