[project]
name = "read-once-handler"
version = "0.1.0"
description = "CDHP handler: prevent redundant Read tool calls within a session"
requires-python = ">=3.11"
dependencies = [
    "cachetools>=5.0",
    "flask>=3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
